@startuml
abstract class OrganizationComponent{
void add()
void remove()
void print()
}
class Department
class College
class University
class Client

OrganizationComponent <|-- Department
OrganizationComponent <|-- College
OrganizationComponent <|-- University
College o-- OrganizationComponent
University o--OrganizationComponent
OrganizationComponent <.. Client
@enduml